<resources>
    <string name="app_name">Proyecto_movil1_grupo6_2023</string>
    <string name="grupo_6">Grupo 6 programacion movil 1\n\n
        Integrantes: \n
        Ivo Rivera\n
        Maria Rivera\n
        Anthonys Ordóñez\n
        Arnoldo  Zamora\n
        Ana Montes\n
        \n</string>
    <string name="getIn">Entrar</string>
    <string name="welcome">Bienvenidos</string>
    <string name="todo">TODO</string>
    <string name="contactos_nelige_una_opcion">Contactos\nelige una opcion</string>
    <string name="contactos_agregar_contacto" />
    <string name="agregar_foto">Agregar foto</string>
    <string name="ver_listado">Ver listado</string>
    <string name="agrega_tu_mejor_nfoto_de_perfil">Agrega tu mejor\nfoto de perfil</string>
    <string name="ingresa_tu_nombre" />
    <string name="viewnombre">Nombre</string>
    <string name="viewtelefono">Telefono</string>
    <string name="viewlatitud">Latitud</string>
    <string name="viewlongitud">Longitud</string>

    <string name="btnCancelar">Cancelar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="lista_contacto">Lista Contactos</string>
    <string name="volver">Volver</string>
    <string name="eliminar">Eliminar</string>
</resources>