<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ContactosActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="199dp"
        app:srcCompat="@drawable/foto_perfil"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="97dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/camera"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="286dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <LinearLayout
        android:layout_width="471dp"
        android:layout_height="92dp"
        android:background="@color/orange"

        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="267dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:text="@string/agrega_tu_mejor_nfoto_de_perfil"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/lgo"
            tools:ignore="ContentDescription" />


    </LinearLayout>


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="400dp"
        android:backgroundTint="#8E8B8B"
        android:ems="10"
        android:inputType="text"
        android:text="@string/viewnombre"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="320dp"
        android:backgroundTint="#8E8B8B"
        android:ems="10"
        android:inputType="text"
        android:text="@string/viewtelefono"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtLatitud"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#8E8B8B"
        android:ems="10"
        android:inputType="text"
        android:text="@string/viewlatitud"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText

        android:id="@+id/txtLongitud"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#8E8B8B"
        android:ems="10"
        android:inputType="text"
        android:text="@string/viewlongitud"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <Button

        android:id="@+id/btnGuardar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#3C6A3D"
        android:text="@string/btnGuardar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLongitud"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#3C6A3D"
        android:text="@string/btnCancelar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLongitud"
        app:layout_constraintVertical_bias="0.235" />


</androidx.constraintlayout.widget.ConstraintLayout>